--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
 body {
-  background-color: aquamarine;
+  background-color: rgb(200, 226, 235);
+}
+
+.welcome {
+  background-color: rgb(227, 249, 227);
 }
